showed how to edit html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>We can edit this</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -61,7 +61,7 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="7u 12u(medium)">
-								<h2>Hi. This is Verti.</h2>
+								<h2>This is how you edit html</h2>
 								<p>It's a free responsive site template by HTML5 UP</p>
 							</div>
 							<div class="5u 12u(medium)">
