--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>The Teacher Lounge</title>
+		<title>The Teacher's Lounge</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,34 +22,18 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">The Teacher's Lounge</a></h1>
+								<span>by The GOATS</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
 									<li class="current"><a href="index.html">Welcome</a></li>
-									<li>
-										<a href="#">Dropdown</a>
-										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									
+									<li><a href="left-sidebar.html">Sign In</a></li>
+									<li><a href="right-sidebar.html">Sign Up</a></li>
+									<li><a href="no-sidebar.html">Learn More</a></li>
 								</ul>
 							</nav>
 
@@ -66,8 +50,8 @@
 							</div>
 							<div class="5u 12u(medium)">
 								<ul>
-									<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
-									<li><a href="#" class="button alt big icon fa-question-circle">More info</a></li>
+									<li><a href="#" class="button big icon fa-arrow-circle-right">Categories</a></li>
+									<li><a href="#" class="button big icon fa-arrow-circle-right">Users</a></li>
 								</ul>
 							</div>
 						</div>
