updated hero text

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">The Teacher's Lounge</a></h1>
-								<span>by The GOATS</span>
+								<span>BY The GOATS</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
+									
 									
 									<li><a href="left-sidebar.html">Sign In</a></li>
 									<li><a href="right-sidebar.html">Sign Up</a></li>
@@ -45,8 +45,8 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="7u 12u(medium)">
-								<h2>This is how you edit html</h2>
-								<p>It's a free responsive site template by HTML5 UP</p>
+								<h2>WELCOME TO THE TEACHER'S LOUNGE</h2>
+								<p>CONNECT WITH YOUR TEACHER ASSOCIATES TODAY!</p>
 							</div>
 							<div class="5u 12u(medium)">
 								<ul>
