--- a/categories.html
+++ b/categories.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body class="no-sidebar">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -29,125 +29,43 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									
-									
 									<li><a href="left-sidebar.html">Sign In</a></li>
 									<li><a href="right-sidebar.html">Sign Up</a></li>
-									<li><a href="no-sidebar.html">Learn More</a></li>
+									<li class="current"><a href="no-sidebar.html">Learn More</a></li>
 								</ul>
 							</nav>
 
 					</header>
 				</div>
 
-			<!-- Banner -->
-				<div id="banner-wrapper">
-					<div id="banner" class="box container">
-						<div class="row">
-							<div class="7u 12u(medium)">
-								<h2>WELCOME TO THE TEACHER'S LOUNGE</h2>
-								<p>CONNECT WITH YOUR TEACHER ASSOCIATES TODAY!</p>
-							</div>
-							<div class="5u 12u(medium)">
-								<ul>
-									<li><a href="categories.html" class="button big icon fa-arrow-circle-right">Categories</a></li>
-									<li><a href="#" class="button big icon fa-arrow-circle-right">Users</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			<!-- Features -->
-				<div id="features-wrapper">
-					<div class="container">
-						<div class="row">
-							<div class="4u 12u(medium)">
-
-								<!-- Box -->
-									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>Put something here</h2>
-												<p>Maybe here as well I think</p>
-											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
-										</div>
-									</section>
-
-							</div>
-							<div class="4u 12u(medium)">
-
-								<!-- Box -->
-									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>An interesting title</h2>
-												<p>This is also an interesting subtitle</p>
-											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
-										</div>
-									</section>
-
-							</div>
-							<div class="4u 12u(medium)">
-
-								<!-- Box -->
-									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>Oh, and finally ...</h2>
-												<p>Here's another intriguing subtitle</p>
-											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
-										</div>
-									</section>
-
-							</div>
-						</div>
-					</div>
-				</div>
-
 			<!-- Main -->
 				<div id="main-wrapper">
 					<div class="container">
-						<div class="row 200%">
-							<div class="4u 12u(medium)">
+						<div id="content">
 
-								<!-- Sidebar -->
-									<div id="sidebar">
-										<section class="widget thumbnails">
-											<h3>Interesting stuff</h3>
-											<div class="grid">
-												<div class="row 50%">
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
-												</div>
-											</div>
-											<a href="#" class="button icon fa-file-text-o">More</a>
-										</section>
-									</div>
+							<!-- Content -->
+								<article>
 
-							</div>
-							<div class="8u 12u(medium) important(medium)">
+									<h1>Categories</h1>
 
-								<!-- Content -->
-									<div id="content">
-										<section class="last">
-											<h2>So what's this all about?</h2>
-											<p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
-											Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-											<a href="#" class="button icon fa-arrow-circle-right">Continue Reading</a>
-										</section>
-									</div>
+                                    <h2> Fine Arts</h2>
+									<p>-Orchestra
+									   -Choir
+									   -Band
+									   -Dance
+									   -Theater</p>
 
-							</div>
+									<h3>Subjects</h3>
+									<p>-Math
+									   -Science
+									   -History
+									   -ELA
+									   -Technology
+									   -ExtraCurricular
+									   -PreExam
+									   -PostExam</p>
+								</article>
+
 						</div>
 					</div>
 				</div>
@@ -204,7 +122,7 @@
 							<div class="3u 6u$(medium) 12u$(small)">
 
 								<!-- Contact -->
-									<section class="widget contact last">
+									<section class="widget contact">
 										<h3>Contact Us</h3>
 										<ul>
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
