--- a/products.html
+++ b/products.html
@@ -29,9 +29,9 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
+									<li><a href="index.html">Welcome</a></li>
 									
-									<li class="current"><a href="#">Sign Up</a></li>
+									<li><a href="#">Sign Up</a></li>
 									<li><a href="#">Sign In</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
@@ -45,7 +45,7 @@
 				<div id="main-wrapper">
 					<div class="container">
 						<div class="row 200%">
-							
+
 			<!-- Features -->
 				<div id="features-wrapper">
 					<div class="container">
