--- a/users.html
+++ b/users.html
@@ -47,7 +47,7 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li> -->
-									<li class="current"><a href="#">Sign Up</a></li>
+									<li><a href="#">Sign Up</a></li>
 									<li><a href="#">Sign In</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
