--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</div>
 							<div class="5u 12u(medium)">
 								<ul>
-									<li><a href="categories.html" class="button big icon fa-arrow-circle-right">Categories</a></li>
+									<li><a href="categories.hml" class="button big icon fa-arrow-circle-right">Categories</a></li>
 									<li><a href="#" class="button big icon fa-arrow-circle-right">Users</a></li>
 								</ul>
 							</div>
