--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>									
-									<li><a href="left-sidebar.html">Sign In</a></li>
-									<li><a href="right-sidebar.html">Sign Up</a></li>
-									<li><a href="no-sidebar.html">Learn More</a></li>
+									<li><a href="#">Sign In</a></li>
+									<li><a href="#">Sign Up</a></li>
+									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
 
