--- a/review.html
+++ b/review.html
@@ -103,7 +103,7 @@
 									<section class="widget links">
 										<h3>Random Stuff</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
+											<li><a href="#">Etiam feugiat </a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
 											<li><a href="#">Sed porttitor cras in erat nec</a></li>
 											<li><a href="#">Felis varius pellentesque potenti</a></li>
