--- a/categories.html
+++ b/categories.html
@@ -23,15 +23,15 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">The Teacher's Lounge</a></h1>
-								<span>BY The GOATS</span>
+								<span>BY THE GOATS</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="left-sidebar.html">Sign In</a></li>
-									<li><a href="right-sidebar.html">Sign Up</a></li>
-									<li class="current"><a href="no-sidebar.html">Learn More</a></li>
+									<li><a href="#">Sign In</a></li>
+									<li><a href="#">Sign Up</a></li>
+									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
 
