--- a/categories.html
+++ b/categories.html
@@ -23,28 +23,79 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">The Teacher's Lounge</a></h1>
-								<span>BY THE GOATS</span>
+								<span>BY The GOATS</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="#">Sign In</a></li>
-									<li><a href="#">Sign Up</a></li>
-									<li><a href="#">Learn More</a></li>
+									<li><a href="left-sidebar.html">Sign In</a></li>
+									<li><a href="right-sidebar.html">Sign Up</a></li>
+									<li class="current"><a href="no-sidebar.html">Learn More</a></li>
 								</ul>
 							</nav>
 
 					</header>
 				</div>
 
-			<!-- Main -->
+			<!-- Features -->
 				<div id="main-wrapper">
 					<div class="container">
-						<div id="content">
+						<div class="row">
+							<div class="4u 12u(medium)">
+
+								<!-- Box -->
+									<section class="widget links">
+										<div class="inner">
+											<header>
+												<h2>Put something here</h2>
+												<p>Maybe here as well I think</p>
+											</header>
+											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										</div>
+									</section>
+
+							</div>
+							<div class="4u 12u(medium)">
+
+								<!-- Box -->
+									<section class="widget links">
+										<div class="inner">
+											<header>
+												<h2>SUBJECTS</h2>
+												<p>This is also an interesting subtitle</p>
+											</header>
+											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										</div>
+									</section>
+
+							</div>
+
+							<div class="4u 12u(medium)">
+								<!-- Box -->
+									<!-- <section class="box feature"> -->
+									<section class = "widget links">
+										<div class="inner">
+											<header>
+												<h2>Grade Level</h2>
+												<p>Here's another intriguing subtitle</p>
+											</header>
+											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										</div>
+									</section>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+			<!-- Main -->
+				<!-- <div id="main-wrapper">
+					<div class="container">
+						<div id="content"> -->
 
 							<!-- Content -->
-								<article>
+<!-- 								<article>
 
 									
 
@@ -64,7 +115,7 @@
 
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			<!-- Footer -->
 				<div id="footer-wrapper">
