--- a/users.html
+++ b/users.html
@@ -28,8 +28,7 @@
 
 						<!-- Nav -->
 							<nav id="nav">
-								<ul>
-									<li><a href="index.html">Welcome</a></li>
+								<ul>									
 <!-- 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
@@ -85,16 +84,14 @@
 
 											<h2>Jane Doe</h2>
 
-											<p>9th grade World Geography Teacher</p>
+											<p>9th grade Algebra Teacher</p>
 
-											<h3>Posted Resources</h3>
+											<h3>Activity</h3>
 											<ul class="style2">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-												<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="#">PowerPoint 1</a></li>
+												<li><a href="#">PowerPoint 2</a></li>
+												<li><a href="#">PowerPoint 3</a></li>
+												<li><a href="#">Recommended Posts</a></li>
 											</ul>
 
 			
