--- a/review.html
+++ b/review.html
@@ -49,7 +49,17 @@
 									<!-- Content -->
 										<article>
 											<h2>Resource</h2>
-											
+										<section class="box feature">
+										<a href="#" class="image featured"><img src="images/alg1.jpg" alt="" /></a>
+										<div class="inner">
+											<header>
+												<h2>PowerPoint 1</h2>
+												<p><strong>Rating: B</strong></p>
+												<p><strong>10 votes</strong></p>
+											</header>
+<!-- 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p> -->
+										</div>
+									</section>	
 										</article>
 
 								</div>
