Here is the User Page
With the "connect to" icons

--- a/index.html
+++ b/index.html
@@ -202,9 +202,8 @@
 									<section class="widget contact last">
 										<h3>Connect</h3>
 										<ul>
-											<li><a href="#" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
-											<li><div class="g-plusone"></div></li>
-										</ul>
+											<li><a href="#" class="icon fa-linkedin"/a>                 		
+									   </ul>
 										<p>1234 Fictional Road<br />
 										Nashville, TN 00000<br />
 										(800) 555-0000</p>
