renamed image to see if it would show up

--- a/review.html
+++ b/review.html
@@ -79,7 +79,7 @@
 										</section>
 										<section>
 											<h3>Ratings</h3>
-											<img class="reviews" src="images/reviews.jpg"/>
+											<img class="reviews" src="images/reviewss.jpg"/>
 										</section>
 
 								</div>
