fixed home page connect section

--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
 
 								<!-- Contact -->
 									<section class="widget contact last">
-										<h3>Connect</h3>
+										<h3>Connect To</h3>
 										<ul>
-											<li><a href="#" class="icon fa-linkedin"/a>                 		
+										<li><a href="#" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>  
+										<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>					
+                                        <li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 									   </ul>
 										<p>1234 Fictional Road<br />
 										Nashville, TN 00000<br />
