--- a/categories.html
+++ b/categories.html
@@ -171,6 +171,8 @@
 										<h3>Connect</h3>
 										<ul>
 											<li><a href="#" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
+											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>					
+	                                        <li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>	
 											<li><div class="g-plusone"></div></li>
 										</ul>
 										<p>1234 Fictional Road<br />
