--- a/index.html
+++ b/index.html
@@ -206,9 +206,11 @@
 										<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>					
                                         <li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 									   </ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
-										(800) 555-0000</p>
+										<p>4321 Innovation Ave<br />
+										Div Valley,Texas 70707<br />
+										(800) 555-0000<br />
+										<br />
+										</p>
 									</section>
 
 							</div>
