--- a/categories.html
+++ b/categories.html
@@ -52,9 +52,9 @@
 												
 											</header>
 											<p>	
-									<p>Math
-									  <p> Science
-									  <p> History
+									   <p><li><a href="products.html">Math</a></li></p>
+									   <p> Science
+									   <p> History
 									   <p>ELA
 									   <p>Technology
 									   <p>ExtraCurricular
