--- a/review.html
+++ b/review.html
@@ -88,7 +88,7 @@
 					</div>
 				</div>
 
-			<!-- Footer -->
+				<!-- Footer -->
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
@@ -98,11 +98,9 @@
 									<section class="widget links">
 										<h3>Random Stuff</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<li><a href="#">About Us</a></li>
+											<li><a href="#">FAQs</a></li>
+											<li><a href="#">Careers</a></li>
 										</ul>
 									</section>
 
@@ -110,22 +108,7 @@
 							<div class="3u 6u$(medium) 12u$(small)">
 
 								<!-- Links -->
-									<section class="widget links">
-										<h3>Random Stuff</h3>
-										<ul class="style2">
-											<li><a href="#">Etiam feugiat </a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
-										</ul>
-									</section>
-
-							</div>
-							<div class="3u 6u(medium) 12u$(small)">
-
-								<!-- Links -->
-									<section class="widget links">
+<!-- 									<section class="widget links">
 										<h3>Random Stuff</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
@@ -135,24 +118,39 @@
 											<li><a href="#">Nullam scelerisque blandit leo</a></li>
 										</ul>
 									</section>
-
+-->
+							</div>
+							<div class="3u 6u(medium) 12u$(small)">
+								<!-- Links -->
+<!-- 									<section class="widget links">
+										<h3>Random Stuff</h3>
+										<ul class="style2">
+											<li><a href="#">Etiam feugiat condimentum</a></li>
+											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
+											<li><a href="#">Sed porttitor cras in erat nec</a></li>
+											<li><a href="#">Felis varius pellentesque potenti</a></li>
+											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+										</ul>
+									</section>
+-->
 							</div>
 							<div class="3u 6u$(medium) 12u$(small)">
 
 								<!-- Contact -->
-									<section class="widget contact">
-										<h3>Contact Us</h3>
+									<section class="widget contact last">
+										<h3>Connect To</h3>
 										<ul>
-											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
-										(800) 555-0000</p>
+										<li><a href="#" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>  
+										<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>					
+                                        <li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+									   </ul>
+										<p>4321 Innovation Ave<br />
+										Div Valley,Texas 70707<br />
+										(800) 555-0000<br />
+										<br />
+										</p>
 									</section>
+					
 
 							</div>
 						</div>
