--- a/sign-in.html
+++ b/sign-in.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Sign-In</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,14 +18,26 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Sign in</h1>
+                <div id="logo">
+								<h1><a href="index.html">The Teacher's Lounge</a></h1>
+								<span>BY The GOATS</span>
+							</div>
+
+						<!-- Nav -->
+							<nav id="nav">									
+								<ul>
+									<li><a href="#">Sign In</a></li>
+									<li><a href="#">Sign Up</a></li>
+									<li><a href="#">Learn More</a></li>
+						 		</ul>
+							</nav>
 			</header>
 
 		<!-- Signup Form -->
 			<form id="signin-form" method="post" action="#">
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="password" name="password" id="password" placeholder="password" />
-				<input type="submit" value="Sign In" />		
+				<input class="button" type="submit" value="Sign In" />		
 			</form>
 <!-- 			<form id="signin-form" method="post" action="#">
 				<input type="submit" value="Sign In" />
