--- a/review.html
+++ b/review.html
@@ -149,7 +149,7 @@
 										(800) 555-0000<br />
 										<br />
 										</p>
-									</section>
+									</section>------
 					
 
 							</div>
