--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>									
-									<li><a href="#">Sign In</a></li>
+									<li><a href="sign-in.html">Sign In</a></li>
 									<li><a href="#">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
