--- a/sign-in.html
+++ b/sign-in.html
@@ -30,8 +30,9 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="#">Sign Up</a></li>
+									
 									<li><a href="#">Sign In</a></li>
+                                    <li><a href="sign-up.html">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
