--- a/users.html
+++ b/users.html
@@ -46,8 +46,9 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li> -->
-									<li><a href="#">Sign Up</a></li>
-									<li><a href="#">Sign In</a></li>
+									
+									<li><a href="sign-in.html">Sign In</a></li>
+                                    <li><a href="#">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
