--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 				</div>
 
 			<!-- Features -->
-<!-- 				<div id="features-wrapper">
+				<!-- <div id="features-wrapper">
 					<div class="container">
-						<div class="row">
-							<div class="4u 12u(medium)"> -->
+						<div class="row"> -->
+							<!-- <div class="4u 12u(medium)"> -->
 
 								<!-- Box -->
-<!-- 									<section class="box feature">
+									<!-- <section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
@@ -72,28 +72,25 @@
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
-									</section>
+									</section> -->
 
-							</div>
-							<div class="4u 12u(medium)"> -->
+							<!-- </div>
+							<div class="4u 12u(medium)">
 
-								<!-- Box -->
-<!-- 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
+								<!- -->
+											<!-- <header>
 												<h2>An interesting title</h2>
 												<p>This is also an interesting subtitle</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
-										</div>
-									</section>
+											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p> -->
+									<!-- 	</div>
+									</section> -->
+<!-- 
+							</div> -->
+						<!-- 	<div class="4u 12u(medium)"> -->
 
-							</div>
-							<div class="4u 12u(medium)"> -->
-
-								<!-- Box -->
-<!-- 									<section class="box feature">
+								
+									<!-- <section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
@@ -102,13 +99,10 @@
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
-									</section>
-
-							</div>
-						</div>
-					</div>
-				</div> -->
-
+									</section> -->
+<!-- 
+							</div> -->
+				<!-- -->
 			<!-- Main -->
 <!-- 				<div id="main-wrapper">
 					<div class="container">
