--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
 												<h2>PowerPoint 1</h2>
 												<p><strong>Rating: B</strong></p>
 												<p><strong>10 votes</strong></p>
-												<li><a href= "review.html">See Post</a></li>
+												<a href= "review.html">See Post</a>
 											</header>
 <!-- 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p> -->
 										</div>
