--- a/sign-in.html
+++ b/sign-in.html
@@ -50,7 +50,7 @@
 				<form id="signin-form" method="post" action="#">
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="password" name="password" id="password" placeholder="Password" />
-				<input class="button" type="submit" value="Sign In" />		
+				<input type="submit" value="Sign In" />		
 			</form>
 
 
