linked slide from product page to review page

--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/alg1.jpg" alt="" /></a>
+										<a href="review.html" class="image featured"><img src="images/alg1.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>PowerPoint 1</h2>
