changed logo font and banner font size

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
 				</div>
 
 			<!-- Banner -->
-				<div id="banner-wrapper">
-					<div id="banner" class="box container">
+				<!-- <div id="banner-wrapper"> -->
+					<div id="main-wrapper">
+					<div id="banner" class="container">
+					<!-- <div class="container"> -->
+
 						<div class="row">
 							<div class="7u 12u(medium)">
 								<h2>WELCOME TO THE TEACHER'S LOUNGE</h2>
@@ -52,6 +55,9 @@
 									<li><a href="users.html" class="button big icon fa-arrow-circle-right">Users</a></li>
 								</ul>
 							</div>
+<!-- 							<div class="row"> 
+								<a class= "image"><img src="images/group.jpg" alt="coworkers" /></a>
+							</div> -->
 						</div>
 					</div>
 				</div>
