--- a/users.html
+++ b/users.html
@@ -66,7 +66,7 @@
 									<!-- Sidebar -->
 										<section>
 <!-- 											<div class="pp"><img src="images/pp.jpg" alt="woman smiling"/></div> -->
-											<a href="#" class="image"><img src="images/pp.jpg" alt="" /></a>
+<!-- 											<a href="#" class="image"><img src="images/pp.jpg" alt="" /></a> -->
 
 										</section>
 
