--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 			<!-- Banner -->
 				<!-- <div id="banner-wrapper"> -->
 					<div id="main-wrapper">
-					<div id="banner" class="container">
-					<!-- <div class="container"> -->
+					<div id="banner" class="box container">
 
 						<div class="row">
 							<div class="7u 12u(medium)">
