removed random stuff

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<nav id="nav">
 								<ul>									
 									<li><a href="sign-in.html">Sign In</a></li>
-									<li><a href="#">Sign Up</a></li>
+									<li><a href="sign-up.html">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
@@ -156,7 +156,6 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
 										<ul class="style2">
 											<li><a href="#">About Us</a></li>
 											<li><a href="#">FAQs</a></li>
