--- a/review.html
+++ b/review.html
@@ -144,9 +144,7 @@
 										(800) 555-0000<br />
 										<br />
 										</p>
-									</section>------
-					
-
+									</section>
 							</div>
 						</div>
 						<div class="row">
