connected signin, signup links

--- a/review.html
+++ b/review.html
@@ -31,7 +31,7 @@
 								<ul>									
 									<li><a href="left-sidebar.html">Sign In</a></li>
 									<li><a href="right-sidebar.html">Sign Up</a></li>
-									<li><a href="no-sidebar.html">Learn More</a></li>
+									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
 					</header>
