--- a/categories.html
+++ b/categories.html
@@ -29,8 +29,8 @@
 						<!-- Nav -->
 							<nav id="nav">									
 								<ul>
-									<li><a href="#">Sign In</a></li>
-									<li><a href="#">Sign Up</a></li>
+									<li><a href="sign-in.html">Sign In</a></li>
+									<li><a href="sign-up.html">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 						 		</ul>
 							</nav>
