--- a/sign-in.html
+++ b/sign-in.html
@@ -30,7 +30,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>	
-									<li><a href="#">Sign In</a></li>
+									<li><a href="sign-in.html">Sign In</a></li>
                                     <li><a href="sign-up.html">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
