connected signin, signup links to review page

--- a/review.html
+++ b/review.html
@@ -29,8 +29,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>									
-									<li><a href="left-sidebar.html">Sign In</a></li>
-									<li><a href="right-sidebar.html">Sign Up</a></li>
+									<li><a href="sign-in.html">Sign In</a></li>
+									<li><a href="sign-up.html">Sign Up</a></li>
 									<li><a href="#">Learn More</a></li>
 								</ul>
 							</nav>
